added loading states for login, signup, admin dashboards

--- a/client/src/components/Admin/Appointments.module.css
+++ b/client/src/components/Admin/Appointments.module.css
@@ -1,6 +1,6 @@
 .appointmentsContainer {
   padding: 70px;
-  max-width: 800px;
+  max-width: 1200px;
   margin: auto;
   font-family: Arial, sans-serif;
   border-radius: 8px;
@@ -131,6 +131,13 @@ span.status.canceled {
 span.status.completed {
   color: green;
   background: rgb(145 254 159 / 47%);
+}
+
+.spinnerContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50vh;
 }
 
 @media (max-width: 600px) {
