--- a/client/src/components/Admin/Doctors.module.css
+++ b/client/src/components/Admin/Doctors.module.css
@@ -3,13 +3,13 @@
   background-color: #f9f9f9;
   border-radius: 10px;
   width: 80%;
-  height: 740px;
+  height: 730px;
   margin: 20px auto;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   font-family: Arial, sans-serif;
 }
 .doctors {
-  height: 580px;
+  height: 550px;
 }
 
 .filterSection {
@@ -148,6 +148,13 @@
 
 .modalContent button:hover {
   background-color: #0056b3;
+}
+
+.spinnerContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50vh;
 }
 
 .formGroup:focus::placeholder,
