--- a/client/src/Pages/ProfileDetails.module.css
+++ b/client/src/Pages/ProfileDetails.module.css
@@ -81,6 +81,13 @@
   background-color: rgba(38, 180, 255, 0.1);
 }
 
+button:disabled {
+  background-color: #d6d6d6;
+  color: #a1a1a1;
+  cursor: not-allowed;
+  opacity: 0.7;
+}
+
 .text_light.small {
   font-size: 0.875rem;
   color: #babbbc;
