--- a/client/src/components/SearchBar/SearchBarResults.module.css
+++ b/client/src/components/SearchBar/SearchBarResults.module.css
@@ -1,4 +1,3 @@
-/* SearchBarResults.module.css */
 .results_list {
   width: 100%;
   background-color: white;
@@ -38,4 +37,9 @@
 .specialty {
   font-size: 12px;
   color: gray;
+}
+
+.spinner {
+  display: flex;
+  justify-content: center;
 }
