Handled pagination for consistency

--- a/client/src/components/DoctorListPagination/Pagination.module.css
+++ b/client/src/components/DoctorListPagination/Pagination.module.css
@@ -36,11 +36,11 @@
   background-color: #d0d0d0;
 }
 
-.paginatio_item.active {
+.active {
   background-color: var(--primary-color);
   color: white;
 }
 
-.pagination-ellipsis {
+.paginationEllipsis {
   padding: 8px 12px;
 }
