--- a/client/src/Pages/ProfileDetails.module.css
+++ b/client/src/Pages/ProfileDetails.module.css
@@ -1,5 +1,7 @@
 .profile_form {
   margin-top: 4rem;
+  margin-left: auto;
+  margin-right: auto;
   background-color: #fff;
   border-radius: 20px;
   padding: 20px;
