--- a/client/src/components/RightSide/RightSide.module.css
+++ b/client/src/components/RightSide/RightSide.module.css
@@ -12,20 +12,42 @@
 .RightSide {
   display: flex;
   flex-direction: column;
-  /* width: 95%; */
   width: 300px;
-  justify-content: space-evenly;
+  justify-content: center;
+  align-items: center;
+  align-self: start;
+  position: sticky;
+  top: 50%;
+  transform: translateY(-50%);
+  min-height: 340px;
+}
+
+.Panel {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 0.75rem;
+  text-align: center;
+}
+
+.UpdatesWrap {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  max-height: 60vh;
+  overflow: auto;
+  padding-right: 0.25rem;
 }
 
 .RightSide h3 {
-  /* text-align: center; */
-  margin-right: 2rem;
+  margin: 0;
 }
 
 @media screen and (max-width: 1200px) {
   .RightSide {
-    justify-content: flex-start;
-    margin-top: 3rem;
+    display: none;
   }
 }
 
