--- a/client/src/components/SideBar/Sidebar.module.css
+++ b/client/src/components/SideBar/Sidebar.module.css
@@ -6,6 +6,7 @@
   transition: all 300ms ease;
   /* background: var(--nav-side); */
   color: var(--nav-text-color);
+  margin-left: -0.35rem;
 }
 
 .bars {
